MOD: Completed config (Swagger-UI, HTML Controller and RESTful Controller)

--- a/src/main/resources/properties/application.properties
+++ b/src/main/resources/properties/application.properties
@@ -3,7 +3,7 @@
 #server.undertow.accesslog.pattern=combined
 #server.compression.enabled=true
 #server.compression.min-response-size=1
-server.contextPath=/admin_func
+server.contextPath=/adminfunc
 server.port=8080
 
 
@@ -23,13 +23,10 @@ upms.url=http://10.37.209.121:6080/upms/soap/ldapImmdUserServiceExtWS
 
 
 pccw.validatorClassList=birthOfYearDTOValidator,ageGroupDTOValidator,checkDuplicateHkicDTOValidator,capcheDTOValidator,contactinformationDTOValidator,birthOfDateDTOValidator,identityDocumentDTOValidator,enquiryCodeDTOValidator,natureDTOValidator,arnDTOValidator,cccDTOValidator,dobDTOValidator,dofrDTOValidator,dorDTOValidator,hkicDTOValidator,moneyDTOValidator,nameDTOValidator,regexDTOValidator,sexDTOValidator
-# Not Works
-security.ignored=/**
-#
-#spring.mvc.view.prefix=/WEB-INF/jsp/
-#spring.mvc.view.suffix=.jsp
 
 logging.level.root=DEBUG
+spring.resources.chain.strategy.content.enabled=true
+spring.resources.chain.strategy.content.paths=/**
 
 #spring.mvc.static-path-pattern=/webapp/**
 #server.contextPath=/javapointers
