--- a/src/main/webapp/WEB-INF/undertow-handlers.conf
+++ b/src/main/webapp/WEB-INF/undertow-handlers.conf
@@ -1,1 +1,1 @@
-regex['^\/([\-\w\.]+)([\-/\w\.]*)(\.([\-\w]+))$'] -> rewrite['/index.jsp']
+# regex['^\/([\-\w\.]+)([\-/\w\.]*)(\.([\-\w]+))$'] -> rewrite['/index.jsp']
