--- a/src/main/js/package.json
+++ b/src/main/js/package.json
@@ -3,30 +3,66 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.17.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-register": "^6.9.0",
+    "bootstrap": "^3.3.7",
+    "bootstrap-sass": "^3.3.7",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.7",
+    "enzyme": "^3.3.0",
+    "eslint-config-prettier": "^2.3.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-plugin-flowtype": "^2.35.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-prettier": "^2.2.0",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-react": "^7.3.0",
+    "eslint-plugin-standard": "^3.0.1",
     "expect": "^22.0.3",
+    "express": "^4.15.4",
+    "flow-bin": "^0.63.1",
+    "history": "^4.7.2",
+    "husky": "^0.14.3",
+    "immutability-helper": "^2.3.1",
+    "jest-enzyme": "^4.0.2",
+    "jquery": "^3.2.1",
+    "lint-staged": "^6.0.0",
     "node-libs-browser": "^2.1.0",
     "node-sass": "^4.7.2",
+    "node-sass-chokidar": "0.0.3",
+    "npm-run-all": "^4.1.1",
+    "popper.js": "^1.12.5",
+    "prettier": "^1.6.1",
+    "prop-types": "^15.5.10",
     "react": "^16.2.0",
     "react-addons-test-utils": "^15.1.0",
+    "react-docgen": "^2.17.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.6",
     "react-scripts": "1.0.17",
+    "react-styleguidist": "^6.0.21",
+    "react-test-renderer": "^16.2.0",
     "redux": "^3.7.2",
+    "redux-api-call": "^1.0.5",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-immutable-state-invariant": "^2.0.0",
     "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.2.3",
     "redux-promise": "^0.5.3",
-    "redux-thunk": "^2.1.0",
+    "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
     "sass-loader": "^6.0.6",
+    "source-map-explorer": "^1.4.0",
     "style-loader": "^0.19.1"
   },
   "devDependencies": {
@@ -40,16 +76,18 @@
     "babel-preset-env": "^1.4.0",
     "babel-preset-react": "^6.24.1",
     "babel-runtime": "^6.20.0",
+    "cp-file-cli": "^1.0.1",
     "css-loader": "^0.28.1",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "webpack": "^3.10.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "resolve-env react-scripts start",
     "dev": "webpack",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "resolve-env": "cp-file ./src/utils/env.dev.js ./src/utils/env.js"
   }
 }
