--- a/src/main/js/package.json
+++ b/src/main/js/package.json
@@ -13,7 +13,6 @@
     "babel-preset-react": "^6.11.1",
     "babel-register": "^6.9.0",
     "bootstrap": "^3.3.7",
-    "bootstrap-sass": "^3.3.7",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.7",
     "enzyme": "^3.3.0",
@@ -27,6 +26,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "expect": "^22.0.3",
     "express": "^4.15.4",
+    "extract-text-webpack-plugin": "^3.0.2",
     "flow-bin": "^0.63.1",
     "history": "^4.7.2",
     "husky": "^0.14.3",
@@ -34,10 +34,12 @@
     "jest-enzyme": "^4.0.2",
     "jquery": "^3.2.1",
     "lint-staged": "^6.0.0",
+    "lodash": "^4.17.4",
     "node-libs-browser": "^2.1.0",
     "node-sass": "^4.7.2",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.1",
+    "path": "^0.12.7",
     "popper.js": "^1.12.5",
     "prettier": "^1.6.1",
     "prop-types": "^15.5.10",
@@ -75,19 +77,28 @@
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-env": "^1.4.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "^6.20.0",
+    "bootstrap-sass": "^3.3.7",
     "cp-file-cli": "^1.0.1",
     "css-loader": "^0.28.1",
+    "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
+    "react-hot-loader": "^3.1.3",
     "sass-loader": "^6.0.6",
-    "webpack": "^3.10.0"
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.11.1",
+    "webpack-merge": "^4.1.1"
   },
   "scripts": {
-    "start": "resolve-env react-scripts start",
-    "dev": "webpack",
-    "build": "react-scripts build",
+    "resolve-env": "cp-file ./src/config/env.dev.js ./src/config/env.js",
+    "resolve": "node_module/copy-file-cli/cli.js ./src/config/env.dev.js ./src/config/env.js",
+    "start": " react-scripts start",
+    "dev": "webpack-dev-server --progress --colors --config ./webpack.config.js",
+    "build-test": "react-scripts build",
+    "build": "webpack",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "resolve-env": "cp-file ./src/utils/env.dev.js ./src/utils/env.js"
+    "eject": "react-scripts eject"
   }
 }
