--- a/src/main/js/package.json
+++ b/src/main/js/package.json
@@ -55,7 +55,6 @@
     "react-test-renderer": "^16.2.0",
     "redux": "^3.7.2",
     "redux-api-call": "^1.0.5",
-    "redux-devtools-extension": "^2.13.2",
     "redux-immutable-state-invariant": "^2.0.0",
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.2.3",
@@ -85,6 +84,7 @@
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
     "react-hot-loader": "^3.1.3",
+    "redux-devtools-extension": "^2.13.2",
     "sass-loader": "^6.0.6",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1",
@@ -94,7 +94,7 @@
     "resolve-env": "cp-file ./src/config/env.dev.js ./src/config/env.js",
     "resolve": "node_module/copy-file-cli/cli.js ./src/config/env.dev.js ./src/config/env.js",
     "start": " react-scripts start",
-    "dev": "webpack-dev-server --progress --colors --config ./webpack.config.js",
+    "dev": "webpack-dev-server --devtool source-map --progress --colors --config ./webpack.config.js",
     "build-test": "react-scripts build",
     "build": "webpack",
     "test": "react-scripts test --env=jsdom",
