--- a/src/main/resources/properties/application.properties
+++ b/src/main/resources/properties/application.properties
@@ -26,5 +26,15 @@ spring.resources.chain.strategy.content.paths=/**
 #spring.mvc.static-path-pattern=/webapp/**
 #server.contextPath=/javapointers
 #server.port=8085
+spring.template.cache=false
+
 
 debug=true
+logging.level.root=WARN
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
+
+
+#spring.security.enabled=false
+#management.security.enabled=false
+#security.basic.enabled=false
