--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,38 @@
+**/*.class
 
-.idea/
-.vscode/
-node_modules/
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
 
-target/
+# Package Files #
+**/*.jar
+**/*.war
+**/*.ear
 
-tmp/
-src/main/js/package-lock.json
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+**/src/test/resources/reports/output/*.*
+**/src/test/resources/reports/output/**/*.*
+
+# For maven
+**/target/
+**/test-output/*
+
+# For Eclipse
+**/.settings
+**/.classpath
+**/.factorypath
+**/MANIFEST.MF
+**/.springBeans
+
+# For idea
+**/.idea
+
+# For nodejs or npm
+**/node_modules/
+
+# For temp files or folders
+**/*.log*
+**/tmp/
+**/*.trc*
+**/*l.orig
