--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.pccw.immd</groupId>
-	<artifactId>admin-func</artifactId>
-	<version>1.0-SNAPSHOT</version>
-	<packaging>war</packaging>
+    <groupId>com.pccw.immd</groupId>
+    <artifactId>admin-func</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
-	<name>Admin Functions</name>
-	<description>Smartics2 Administrative Function</description>
+    <name>Admin Functions</name>
+    <description>Smartics2 Administrative Function</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -46,7 +46,7 @@
         <javax.jsp.version>2.3.0</javax.jsp.version>
         <!-- J2EE 7 lib END -->
     </properties>
-	<dependencies>
+    <dependencies>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -228,7 +228,7 @@
             <artifactId>pccw-util</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
-		<dependency>
+        <dependency>
             <groupId>oro</groupId>
             <artifactId>oro</artifactId>
             <version>2.0.8</version>
@@ -237,12 +237,12 @@
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
             <version>1.8.3</version>
-		</dependency>
-		<dependency>
-			<groupId>net.minidev</groupId>
-			<artifactId>json-smart</artifactId>
-			<version>2.2.1</version>
-		</dependency>
+        </dependency>
+        <dependency>
+            <groupId>net.minidev</groupId>
+            <artifactId>json-smart</artifactId>
+            <version>2.2.1</version>
+        </dependency>
         <dependency>
             <groupId>local</groupId>
             <artifactId>oracle.ojdbc</artifactId>
@@ -250,10 +250,10 @@
             <scope>system</scope>
             <systemPath>${local.java.lib}/ojdbc6.jar</systemPath>
         </dependency>
-	</dependencies>
+    </dependencies>
 
-	<build>
-		<plugins>
+    <build>
+        <plugins>
             <plugin>
                 <artifactId>maven-war-plugin</artifactId>
                 <configuration>
@@ -261,15 +261,15 @@
                     <attachClasses>true</attachClasses>
                 </configuration>
             </plugin>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <!--<jvmArguments>-->
-                        <!-- -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005-->
-                    <!--</jvmArguments>-->
+                    <jvmArguments>
+                         -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
+                    </jvmArguments>
                 </configuration>
-			</plugin>
+            </plugin>
 
 
 <!--
@@ -309,9 +309,9 @@
                     </execution>
                 </executions>
             </plugin>
-	-->
-		</plugins>
-	</build>
+    -->
+        </plugins>
+    </build>
 
     <profiles>
         <profile>
@@ -374,6 +374,7 @@
         </profile>
     </profiles>
 <!--
+-->
      <pluginRepositories>
         <pluginRepository>
             <id>central</id>
@@ -383,11 +384,11 @@
     </pluginRepositories>
 
 
--->
     <repositories>
 
 
 <!--
+-->
         <repository>
             <id>central</id>
             <name>the nexus repository of pccw framework team</name>
@@ -419,7 +420,6 @@
             <url>http://central.maven.org/maven2</url>
         </repository>
 
--->
 
     </repositories>
 </project>
