--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,10 +31,13 @@ spring.template.cache=false
 
 
 debug=true
-logging.level.root=WARN
+logging.level.root=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
 
+logging.file = adminfunc.log 
+logging.path = /logs/adminfunc
+#logging.pattern.console= %d{yyyy-MMM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{15} - %msg%n 
 
 #spring.security.enabled=false
 #management.security.enabled=false
