--- a/src/main/resources/properties/database.properties
+++ b/src/main/resources/properties/database.properties
@@ -13,8 +13,8 @@ hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 # Automatically validates or exports schema DDL to the database when the SessionFactory is created.
 # With create-drop, the database schema will be dropped when the SessionFactory is closed explicitly.
 # e.g. validate | update | create | create-drop
-hibernate.hbm2ddl.auto=create
-hibernate.
+hibernate.hbm2ddl.auto=validate
+#hibernate.
 hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 hibernate.show_sql=true
 hibernate.format_sql=true
