MOD: Integrated UPMS (LDAPI1101,LDAPI1102,LDAPI1103)

--- a/src/main/resources/properties/upms.properties
+++ b/src/main/resources/properties/upms.properties
@@ -2,16 +2,18 @@ web.umps.endpoint=https://upvdc1lvwb01h02.iss3dev.immd.hksarg:8443/war.upms.ws/s
 #system.umps.endpoint=https://10.26.210.25:8443/war.upms.ws/services/buzz/ldapImmdUserServiceExtWS
 
 web.auth.interceptUrlAccess=UMPS_USER
-web.auth.exception.badCredentialsException=/AUTH/login_form.html?errorMsg=AUTH-E-0001
-web.auth.exception.disabledException=/AUTH/login_form.html?errorMsg=AUTH-E-0002
-web.auth.invalidSessionUrl=/AUTH/login_form.html?errorMsg=AUTH-E-0003
-web.auth.exception.accountExpiredException=/AUTH/login_form.html?errorMsg=AUTH-E-0004
-web.auth.exception.lockedException=/AUTH/login_form.html?errorMsg=AUTH-E-0005
 web.auth.interceptUrlPattern=/**/*
-web.auth.logInUrl=/AUTH/login_form.html
+web.auth.logInUrl=/AUTH/login_form.html?errorMsg=AUTH-E-IN
 web.auth.logInProcessingUrl=/AUTH/login.html
 web.auth.logInDefaultTargetUrl=/landing
 web.auth.logOutUrl=/AUTH/logout.html
-web.auth.logOutSuccessUrl=/AUTH/login_form.html
-web.auth.errorPage=/AUTH/login_form.html
+web.auth.logOutSuccessUrl=/AUTH/login_form.html?errorMsg=AUTH-E-OUT
+web.auth.errorPage=/AUTH/login-fail.html
 web.auth.authenticationFailureUrl=/AUTH/login_form.html?error=true
+
+web.auth.exception.badCredentialsException=/AUTH/login-fail.html
+web.auth.exception.disabledException=/AUTH/login-fail.html
+web.auth.exception.accountExpiredException=/AUTH/login_form.html?errorMsg=AUTH-E-0004
+web.auth.exception.lockedException=/AUTH/login-fail.html
+
+web.auth.invalidSessionUrl=/AUTH/login_form.html?errorMsg=AUTH-E-IIII
