--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.devtools.livereload.enabled=true
 #spring.devtools.restart.additional-paths=
 #spring.devtools.restart.exclude=
 
-spring.profiles.active=sit
+#spring.profiles.active=sit
 #spring.config.name=application.properties
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
@@ -27,11 +27,11 @@ spring.resources.chain.strategy.content.paths=/**
 #server.contextPath=/javapointers
 #server.port=8085
 spring.template.cache=false
-
+spring.thymeleaf.cache=false
 
 
 debug=true
-logging.level.root=DEBUG
+logging.level.root=INFO
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
 
