--- a/pom.xml
+++ b/pom.xml
@@ -372,6 +372,32 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>withModule</id>
+            <!--<build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-war-plugin</artifactId>
+                        <configuration>
+                            <overlays>
+                                <overlay>
+                                    <artifactId>admin-func-module</artifactId>
+                                    <version>1.0-SNAPSHOT</version>
+                                </overlay>
+                            </overlays>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>-->
+            <dependencies>
+                <dependency>
+                    <groupId>com.pccw.immd</groupId>
+                    <artifactId>admin-func-module</artifactId>
+                    <version>1.0-SNAPSHOT</version>
+                </dependency>
+            </dependencies>
+        </profile>
     </profiles>
 <!--
 -->
