--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,6 @@
 server.contextPath=/adminfunc
 server.port=8080
 
-
 spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
 
@@ -35,10 +34,23 @@ logging.level.root=INFO
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
 
-logging.file = adminfunc.log 
-logging.path = /logs/adminfunc
+logging.file = adminfunc.log
+logging.path = /logs/adminfunc/
 #logging.pattern.console= %d{yyyy-MMM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{15} - %msg%n 
 
 #spring.security.enabled=false
 #management.security.enabled=false
 #security.basic.enabled=false
+
+
+# INTERNATIONALIZATION (MessageSourceAutoConfiguration)
+# Set whether to always apply the MessageFormat rules, parsing even messages without arguments.
+#spring.messages.always-use-message-format=false
+# Comma-separated list of basenames (essentially a fully-qualified classpath location), each following the ResourceBundle convention with relaxed support for slash based locations.
+#spring.messages.basename=classpath:i18n/message;message
+# Loaded resource bundle files cache expiration, in seconds. When set to -1, bundles are cached forever.
+#spring.messages.cache-seconds=-1
+# Message bundles encoding.
+#spring.messages.encoding=UTF-8
+# Set whether to fall back to the system Locale if no files for a specific Locale have been found.
+#spring.messages.fallback-to-system-locale=true
