--- a/src/main/resources/properties/upms.properties
+++ b/src/main/resources/properties/upms.properties
@@ -12,6 +12,6 @@ web.auth.logInUrl=/AUTH/login-form.do?errorMsg=AUTH-E-IN
 web.auth.logInProcessingUrl=/AUTH/login.do
 web.auth.logInDefaultTargetUrl=/landing
 web.auth.logOutUrl=/AUTH/logout.do
-web.auth.logOutSuccessUrl=/AUTH/login-form.do?errorMsg=AUTH-E-OUT
+web.auth.logOutSuccessUrl=/AUTH/logout-result.do
 web.auth.errorPage=/AUTH/login-form.do
 web.auth.authenticationFailureUrl=/AUTH/login-form.do?error=true
