--- a/pom.xml
+++ b/pom.xml
@@ -243,6 +243,14 @@
             <artifactId>json-smart</artifactId>
             <version>2.2.1</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>${aspectj.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>local</groupId>
             <artifactId>oracle.ojdbc</artifactId>
