--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# default
 #server.undertow.accesslog.enabled=true
 #server.undertow.accesslog.dir=target/logs
 #server.undertow.accesslog.pattern=combined
@@ -6,16 +7,11 @@
 server.contextPath=/adminfunc
 server.port=8080
 
-spring.devtools.restart.enabled=true
-spring.devtools.livereload.enabled=true
+#spring.devtools.restart.enabled=true
+#spring.devtools.livereload.enabled=true
 
 #spring.devtools.restart.additional-paths=
 #spring.devtools.restart.exclude=
-
-#spring.profiles.active=sit
-#spring.config.name=application.properties
-spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 pccw.validatorClassList=birthOfYearDTOValidator,ageGroupDTOValidator,checkDuplicateHkicDTOValidator,capcheDTOValidator,contactinformationDTOValidator,birthOfDateDTOValidator,identityDocumentDTOValidator,enquiryCodeDTOValidator,natureDTOValidator,arnDTOValidator,cccDTOValidator,dobDTOValidator,dofrDTOValidator,dorDTOValidator,hkicDTOValidator,moneyDTOValidator,nameDTOValidator,regexDTOValidator,sexDTOValidator
 
@@ -28,15 +24,7 @@ spring.resources.chain.strategy.content.paths=/**
 spring.template.cache=false
 spring.thymeleaf.cache=false
 
-
 debug=true
-logging.level.root=INFO
-logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate=ERROR
-
-logging.file = adminfunc.log
-logging.path = /logs/adminfunc/
-#logging.pattern.console= %d{yyyy-MMM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{15} - %msg%n 
 
 #spring.security.enabled=false
 #management.security.enabled=false
