FIX: Menu ordering problem

--- a/src/test/resources/menu/menu.properties
+++ b/src/test/resources/menu/menu.properties
@@ -1,6 +1,12 @@
 e-Services-2=#ESERVICES2
 e-Services-2.Enquiry=#ESERVICES2-ENQUIRY
 e-Services-2.Enquiry.Application_Fee_Enquiry=/ESERVICES2/enquiry/applicationFeeEnquiry.do
+
+
+TEST2
+
+TEST1=
+# abc = abc
 SMARTICS-2=#SMARTICS2
 SMARTICS-2.Enquiry=#SMARTICS2-ENQUIRY
 SMARTICS-2.Enquiry.Application_Fee_Enquiry=/SMARTICS2/enquiry/applicationFeeEnquiry.do
