--- a/src/test/resources/menu/menu.properties
+++ b/src/test/resources/menu/menu.properties
@@ -1,15 +1,14 @@
 e-Services-2=#ESERVICES2
 e-Services-2.Enquiry=#ESERVICES2-ENQUIRY
-e-Services-2.Enquiry.Application_Fee_Enquiry=/ESERVICES2/enquiry/applicationFeeEnquiry.do
+e-Services-2.Enquiry.Application_Fee_Enquiry=/e-Services-2/enquiry/applicationFeeEnquiry.do
+e-Services-2.Enquiry.System_Holiday=/e-Services-2/enquiry/systemHoliday.do
+e-Services-2.Maintenance.Surge_Control=/e-Services-2/maintenance/surgeControl.do
+e-Services-2.Maintenance.Access_Control=/e-Services-2/maintenance/accessControl.do
 
-
-TEST2
-
-TEST1=
-# abc = abc
 SMARTICS-2=#SMARTICS2
 SMARTICS-2.Enquiry=#SMARTICS2-ENQUIRY
-SMARTICS-2.Enquiry.Application_Fee_Enquiry=/SMARTICS2/enquiry/applicationFeeEnquiry.do
+SMARTICS-2.Enquiry.Appointment_Booking_Enquiry=/SMARTICS-2/enquiry/appointmentBookingEnquiry.do
+
 RM=#RM
 RM.Enquiry=#RM-ENQUIRY
-RM.Enquiry.Application_Fee_Enquiry=/RM/enquiry/applicationFeeEnquiry.do
+RM.Enquiry.Online_Submission_Enquiry=/RM/enquiry/onlineSubmissionEnquiry.do
