ADD: Add missing "e-Services-2.Maintenance" item to link up between first and third level.

--- a/src/main/resources/menu/menu.properties
+++ b/src/main/resources/menu/menu.properties
@@ -2,6 +2,7 @@ e-Services-2=#ESERVICES2
 e-Services-2.Enquiry=#ESERVICES2-ENQUIRY
 e-Services-2.Enquiry.Application_Fee_Enquiry=/e-Services-2/enquiry/applicationFeeEnquiry.do
 e-Services-2.Enquiry.System_Holiday=/e-Services-2/enquiry/systemHoliday.do
+e-Services-2.Maintenance=#ESERVICES2-Maintenance
 e-Services-2.Maintenance.Surge_Control=/e-Services-2/maintenance/surgeControl.do
 e-Services-2.Maintenance.Access_Control=/e-Services-2/maintenance/accessControl.do
 
