ADD: Added login and login fail audit

--- a/src/main/resources/properties/spring-security.properties
+++ b/src/main/resources/properties/spring-security.properties
@@ -7,7 +7,7 @@ web.auth.exception.lockedException=/AUTH/login-form.do?errorMsg=AUTH-E-0005
 web.auth.interceptUrlPattern=/**/*
 web.auth.logInUrl=/AUTH/login-form.do?errorMsg=AUTH-E-IN
 web.auth.logInProcessingUrl=/AUTH/login.do
-web.auth.logInDefaultTargetUrl=/landing
+web.auth.logInDefaultTargetUrl=/landing.do
 web.auth.logOutUrl=/AUTH/logout.do
 web.auth.logOutSuccessUrl=/AUTH/logout-result.do
 web.auth.errorPage=/AUTH/login-fail.do
