Add: Config the servlet of Spring MVC "load on startup"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,8 @@ pccw.validatorClassList=birthOfYearDTOValidator,ageGroupDTOValidator,checkDuplic
 spring.resources.chain.strategy.content.enabled=true
 spring.resources.chain.strategy.content.paths=/**
 
+# Spring MVC
+spring.mvc.servlet.load-on-startup=1
 #spring.mvc.static-path-pattern=/webapp/**
 #server.contextPath=/javapointers
 #server.port=8085
