--- a/src/main/env/local/properties/database.properties
+++ b/src/main/env/local/properties/database.properties
@@ -1,7 +1,7 @@
 eservice2.web.datasource.url=jdbc:oracle:thin:@//localhost:1521/xe
 eservice2.web.datasource.username=se2adminfunc
 eservice2.web.datasource.password=password
-eservice2.web.datasource.className=oracle.jdbc.OracleDriver
+eservice2.web.datasource.className=oracle.jdbc.driver.OracleDriver
 
 #eservice2.web.datasource.jndi=
 #eservice2.web.datasource.=
