--- a/src/main/resources/menu/menu.properties
+++ b/src/main/resources/menu/menu.properties
@@ -1,10 +1,11 @@
 e-Services-2=#ESERVICES2
-e-Services-2.Enquiry=#ESERVICES2-ENQUIRY
+e-Services-2.Enquiry=/landing.do
 e-Services-2.Enquiry.Application_Fee_Enquiry=/e-Services-2/enquiry/applicationFeeEnquiry.do
 e-Services-2.Enquiry.System_Holiday=/e-Services-2/enquiry/systemHoliday.do
-e-Services-2.Maintenance=#ESERVICES2-Maintenance
+e-Services-2.Maintenance=/landing.do
 e-Services-2.Maintenance.Surge_Control=/e-Services-2/maintenance/surgeControl.do
 e-Services-2.Maintenance.Access_Control=/e-Services-2/maintenance/accessControl.do
+e-Services-2.Maintenance.Audit_Log=/e-Services-2/maintenance/auditLog_SearchForm.do
 
 SMARTICS-2=#SMARTICS2
 SMARTICS-2.Enquiry=#SMARTICS2-ENQUIRY
