--- a/src/main/resources/menu/menu.properties
+++ b/src/main/resources/menu/menu.properties
@@ -2,10 +2,13 @@ e-Services-2=#ESERVICES2
 e-Services-2.Enquiry=/landing.do
 e-Services-2.Enquiry.Application_Fee_Enquiry=/e-Services-2/enquiry/applicationFeeEnquiry.do
 e-Services-2.Enquiry.System_Holiday=/e-Services-2/enquiry/systemHoliday.do
+e-Services-2.Enquiry.Schedule_Job_View=/e-Services-2/enquiry/scheduleJobView.do
+e-Services-2.Enquiry.Schedule_Job_View_History=/e-Services-2/enquiry/scheduleJobViewHistory.do
 e-Services-2.Maintenance=/landing.do
 e-Services-2.Maintenance.Surge_Control=/e-Services-2/maintenance/surgeControl.do
 e-Services-2.Maintenance.Access_Control=/e-Services-2/maintenance/accessControl.do
 e-Services-2.Maintenance.Audit_Log=/e-Services-2/maintenance/auditLog_SearchForm.do
+e-Services-2.Maintenance.Schedule_Job=/e-Services-2/maintenance/scheduleJob.do
 
 SMARTICS-2=#SMARTICS2
 SMARTICS-2.Enquiry=#SMARTICS2-ENQUIRY
