--- a/src/main/resources/menu/menu.properties
+++ b/src/main/resources/menu/menu.properties
@@ -9,6 +9,10 @@ e-Services-2.Maintenance.Surge_Control=/e-Services-2/maintenance/surgeControl.do
 e-Services-2.Maintenance.Access_Control=/e-Services-2/maintenance/accessControl.do
 e-Services-2.Maintenance.Audit_Log=/e-Services-2/maintenance/auditLog.do
 e-Services-2.Maintenance.Schedule_Job=/e-Services-2/maintenance/scheduleJob.do
+e-Services-2.Management=/landing.do
+e-Services-2.Management.Create_Function_Group=/e-Services-2/management/createFunctionGroup.do
+e-Services-2.Management.Update_Function_Group=/e-Services-2/management/updateFunctionGroup.do
+e-Services-2.Management.Delete_Function_Group=/e-Services-2/management/deleteFunctionGroup.do
 
 SMARTICS-2=#SMARTICS2
 SMARTICS-2.Enquiry=#SMARTICS2-ENQUIRY
