ADD: Appointment Booking Enquiry, Smartics2 & RM Online Submission Enquiry

--- a/src/main/resources/menu/menu.properties
+++ b/src/main/resources/menu/menu.properties
@@ -15,9 +15,11 @@ e-Services-2.Management.Update_Function_Group=/e-Services-2/management/updateFun
 e-Services-2.Management.Delete_Function_Group=/e-Services-2/management/deleteFunctionGroup.do
 
 SMARTICS-2=#SMARTICS2
-SMARTICS-2.Enquiry=#SMARTICS2-ENQUIRY
+SMARTICS-2.Enquiry=/landing.do
 SMARTICS-2.Enquiry.Appointment_Booking_Enquiry=/SMARTICS-2/enquiry/appointmentBookingEnquiry.do
+SMARTICS-2.Enquiry.Online_Submission_Enquiry=/SMARTICS-2/enquiry/onlineSubmissionEnquiry.do
+SMARTICS-2.Maintenance=/landing.do
 
 RM=#RM
-RM.Enquiry=#RM-ENQUIRY
+RM.Enquiry=/landing.do
 RM.Enquiry.Online_Submission_Enquiry=/RM/enquiry/onlineSubmissionEnquiry.do
