--- a/src/main/resources/menu/menu.properties
+++ b/src/main/resources/menu/menu.properties
@@ -19,6 +19,7 @@ SMARTICS-2=#SMARTICS2
 SMARTICS-2.Enquiry=/landing.do
 SMARTICS-2.Enquiry.Appointment_Booking_Enquiry=/SMARTICS-2/enquiry/appointmentBookingEnquiry.do
 SMARTICS-2.Enquiry.Online_Submission_Enquiry=/SMARTICS-2/enquiry/onlineSubmissionEnquiry.do
+SMARTICS-2.Enquiry.Enquiry_Code_Information=/SMARTICS-2/enquiry/enquiryCodeInformation.do
 SMARTICS-2.Maintenance=/landing.do
 
 RM=#RM
