ADD: Delete Appointment

--- a/src/main/resources/menu/menu.properties
+++ b/src/main/resources/menu/menu.properties
@@ -21,6 +21,7 @@ SMARTICS-2.Enquiry.Appointment_Booking_Enquiry=/SMARTICS-2/enquiry/appointmentBo
 SMARTICS-2.Enquiry.Online_Submission_Enquiry=/SMARTICS-2/enquiry/onlineSubmissionEnquiry.do
 SMARTICS-2.Enquiry.Enquiry_Code_Information=/SMARTICS-2/enquiry/enquiryCodeInformation.do
 SMARTICS-2.Maintenance=/landing.do
+SMARTICS-2.Maintenance.Delete_Appointment=/SMARTICS-2/maintenance/deleteAppointment.do
 
 RM=#RM
 RM.Enquiry=/landing.do
