--- a/src/main/resources/menu/menu.properties
+++ b/src/main/resources/menu/menu.properties
@@ -10,6 +10,7 @@ e-Services-2.Maintenance.Access_Control=/e-Services-2/maintenance/accessControl.
 e-Services-2.Maintenance.Audit_Log=/e-Services-2/maintenance/auditLog.do
 e-Services-2.Maintenance.Schedule_Job=/e-Services-2/maintenance/scheduleJob.do
 e-Services-2.Maintenance.IVRS=/e-Services-2/maintenance/ivrs.do
+e-Services-2.Maintenance.Important_Announcement=/e-Services-2/maintenance/importantAnnouncement.do
 e-Services-2.Management=/landing.do
 e-Services-2.Management.Create_Function_Group=/e-Services-2/management/createFunctionGroup.do
 e-Services-2.Management.Update_Function_Group=/e-Services-2/management/updateFunctionGroup.do
