Initial commit for implementation of web service

--- a/src/main/resources/properties/spring-security.properties
+++ b/src/main/resources/properties/spring-security.properties
@@ -12,3 +12,5 @@ web.auth.logOutUrl=/AUTH/logout.do
 web.auth.logOutSuccessUrl=/AUTH/logout-result.do
 web.auth.errorPage=/AUTH/login-fail.do
 web.auth.authenticationFailureUrl=/AUTH/login-form.do?error=true
+
+web.auth.webservice=/icons/upms/EnquireTransactionGroupServiceWSImplPortImpl
