--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 #server.compression.enabled=true
 #server.compression.min-response-size=1
 server.contextPath=/adminfunc
-server.port=8080
+server.port=8082
 
 #spring.devtools.restart.enabled=true
 #spring.devtools.livereload.enabled=true
@@ -44,3 +44,9 @@ debug=true
 #spring.messages.encoding=UTF-8
 # Set whether to fall back to the system Locale if no files for a specific Locale have been found.
 #spring.messages.fallback-to-system-locale=true
+
+
+# CXF JAXRS Server
+cxf.jaxrs.server.path=/webservices
+#cxf.jaxrs.component-scan=true
+#cxf.jaxrs.classes-scan-packages=org.apache.cxf.jaxrs.swagger
