MOD: Permission Function with config update

--- a/src/main/env/uat/properties/upms.properties
+++ b/src/main/env/uat/properties/upms.properties
@@ -1,2 +1,1 @@
-system.umps.endpoint=https://10.26.210.25:8443/war.upms.ws/services/buzz/ldapImmdUserServiceExtWS
-
+web.umps.endpoint=https://10.26.210.25:8443/war.upms.ws/services/buzz/ldapImmdUserServiceExtWS
