--- a/src/main/env/dev/properties/upms.properties
+++ b/src/main/env/dev/properties/upms.properties
@@ -1,2 +1,2 @@
-system.umps.endpoint=https://10.26.210.25:8443/war.upms.ws/services/buzz/ldapImmdUserServiceExtWS
+web.umps.endpoint=https://upvdc1lvwb01h02.iss3dev.immd.hksarg:8443/war.upms.ws/services/buzz
 
