--- a/src/main/env/local/properties/upms.properties
+++ b/src/main/env/local/properties/upms.properties
@@ -1,3 +1,4 @@
 web.umps.endpoint=https://upvdc1lvwb01h02.iss3dev.immd.hksarg:8443/war.upms.ws/services/buzz/ldapImmdUserServiceExtWS
 web.trxgrp.endpoint=http://localhost/adminfunc/icons/upms/enquireTranGpSvc
-
+web.loginmode.byrole=true
+web.loginmode.demouser=true
