MOD: Add comments for UPMS config

--- a/src/main/env/local/properties/upms.properties
+++ b/src/main/env/local/properties/upms.properties
@@ -1,4 +1,5 @@
+# For LAN_DS https://upvdc1lvwb01h02.iss3dev.immd.hksarg:8443/war.upms.ws/services/buzz/ldapImmdUserServiceExtWS
 web.umps.endpoint=https://upvdc1lvwb01h02.iss3dev.immd.hksarg:8443/war.upms.ws/services/buzz/ldapImmdUserServiceExtWS
 web.trxgrp.endpoint=http://localhost/adminfunc/icons/upms/enquireTranGpSvc
-web.loginmode.byrole=true
-web.loginmode.demouser=true
+#web.loginmode.byrole=true
+#web.loginmode.demouser=true
