MOD: Update Config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,9 @@ server.port=8082
 
 pccw.validatorClassList=birthOfYearDTOValidator,ageGroupDTOValidator,checkDuplicateHkicDTOValidator,capcheDTOValidator,contactinformationDTOValidator,birthOfDateDTOValidator,identityDocumentDTOValidator,enquiryCodeDTOValidator,natureDTOValidator,arnDTOValidator,cccDTOValidator,dobDTOValidator,dofrDTOValidator,dorDTOValidator,hkicDTOValidator,moneyDTOValidator,nameDTOValidator,regexDTOValidator,sexDTOValidator
 
-spring.resources.chain.strategy.content.enabled=true
-spring.resources.chain.strategy.content.paths=/**
+#spring.resources.chain.strategy.content.enabled=true
+#spring.resources.chain.strategy.content.paths=/**
+#spring.resources.chain.strategy.fixed.enabled=true
 
 # Spring MVC
 spring.mvc.servlet.load-on-startup=1
