MOD: Update Env. config

--- a/src/main/env/dev/properties/database.properties
+++ b/src/main/env/dev/properties/database.properties
@@ -1,7 +1,11 @@
-eservice2.web.datasource.url=jdbc:oracle:thin:@//10.26.213.89:1521/ecuat
+#UAT
+#eservice2.web.datasource.url=jdbc:oracle:thin:@//10.26.213.89:1521/ecuat
+#DEV
+eservice2.web.datasource.url=jdbc:oracle:thin:@//10.26.213.89:1521/ECDEV
 eservice2.web.datasource.username=ECDBA
 eservice2.web.datasource.password=SC2password1
 eservice2.web.datasource.className=oracle.jdbc.driver.OracleDriver
+
 
 #eservice2.web.datasource.jndi=
 #eservice2.web.datasource.=
